# auth-microservice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/agents/: docs_agent.md
app/: main.py
app/api/: deps.py
app/api/endpoints/: admin.py  auth.py  users.py
app/core/: config.py  security.py
app/database/: base.py  session.py
app/models/: user.py
app/schemas/: token.py  user.py
migrations/: env.py
tests/: conftest.py  test_auth.py  test_main.py  test_users.py
