[project]
name = "inwren-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.3",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
]
